force-app/main/default/objects/Case/fields/Battery_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Battery_Serial_Number__c</fullName>
    <label>Battery Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>