force-app/main/default/objects/Case/fields/Portal_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Portal_Request_Number__c</fullName>
    <externalId>true</externalId>
    <label>Portal Request Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>