force-app/main/default/objects/Case/fields/Portal_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Request_Type__c</fullName>
    <label>Portal Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Warranty Claim</fullName><default>false</default><label>Warranty Claim</label></value>
            <value><fullName>Installation Support</fullName><default>false</default><label>Installation Support</label></value>
            <value><fullName>Battery Replacement</fullName><default>false</default><label>Battery Replacement</label></value>
            <value><fullName>Technical Issue</fullName><default>false</default><label>Technical Issue</label></value>
            <value><fullName>Delivery Damage</fullName><default>false</default><label>Delivery Damage</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>