force-app/main/default/objects/Case/fields/Related_Dealer_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Dealer_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Dealer Order</label>
    <referenceTo>Dealer_Order__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>